--- a/src/containers/pages/LandingPage/index.css
+++ b/src/containers/pages/LandingPage/index.css
@@ -1,19 +1,48 @@
+/*@-webkit-keyframes test {
+    50% {
+      background-image: url(../../../Assets/bg2.gif);
+    }
+    100% {
+      background-image: url(../../../Assets/bg1.jpg);
+    }
+  }
+
 .bg {
     width: 100%;
     height: 100%;
     position: relative;
-    background-image: url(../../../Assets/bg.jpeg);
+    background-image: test;
     background-repeat: no-repeat;
     background-size:cover;
-    background-position: 0%;
-    background-position-y:center;
+    background-position: 25%;
+    background-clip: border-box;
+    animation: test infinite 240s;
     
- }
+ }*/
+ .bg { animation: changeBg 8s infinite;
+       width: 100%;
+       height: 100%;
+       background-repeat: no-repeat;
+       background-size:cover; }
+@keyframes changeBg{
+   0%, 50%{background-image: url("../../../Assets/bg_2.png");}
+    60%,100%{background-image: url("../../../Assets/bg_3.jpg");}
+}
+
+.gif{
+    width: 70%;
+    height: 70%;
+
+}
 
 .home__head__container{
-   padding-top: 20%;
-   
+   padding-top: 5%;
+   padding-bottom: 10%;
 }
+
+.home__body__container{
+    padding-top: 10%;
+ }
 
  .invest_h1{
     font-size: 50px;
