--- a/src/containers/pages/LandingPage/index.css
+++ b/src/containers/pages/LandingPage/index.css
@@ -1,24 +1,4 @@
-/*@-webkit-keyframes test {
-    50% {
-      background-image: url(../../../Assets/bg2.gif);
-    }
-    100% {
-      background-image: url(../../../Assets/bg1.jpg);
-    }
-  }
 
-.bg {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    background-image: test;
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-position: 25%;
-    background-clip: border-box;
-    animation: test infinite 240s;
-    
- }*/
  .bg { animation: changeBg 8s infinite;
        width: 100%;
        height: 100%;
@@ -33,6 +13,11 @@
     width: 70%;
     height: 70%;
 
+}
+
+.understandimg, .customiseimg, .professionalimg{
+  width: 80%;
+  height: 80%;
 }
 
 .home__head__container{
