--- a/src/components/EstimationForm/index.css
+++ b/src/components/EstimationForm/index.css
@@ -1,3 +1,15 @@
 .userEstimation {
-  align-items: center;
+  display: grid;
+  text-align: center;
+  background-color: rgb(232, 214, 250);
+}
+
+.FormFields {
+  display: grid;
+  grid-gap: 15px;
+  width: 20%;
+}
+
+.ResponseDisplay {
+  width: 10%;
 }
