--- a/src/components/EstimationForm/index.css
+++ b/src/components/EstimationForm/index.css
@@ -27,11 +27,17 @@
 }
 
 .FormHeading {
-  margin: auto;
-  text-align: left;
   padding-left: 3%;
+  text-align: left;
+  width: 40%;
 }
 
 .FormTitle {
-  align-self: initial;
+  width: 20%;
+  margin: 10px;
+}
+
+.FormDescription {
+  padding-top: 15%;
+  margin: auto;
 }
