--- a/src/components/Blocks/BlockCard/index.css
+++ b/src/components/Blocks/BlockCard/index.css
@@ -1,5 +1,14 @@
-.block1-it {
+.block1-it,
+.block1-promote {
   text-align: left;
+  height: 100%;
+}
+
+.block1-it-container {
+  padding: 20px;
+}
+.make-first-invest-text {
+  max-width: 350px;
 }
 
 .card-details {
@@ -17,4 +26,8 @@
 
 .card-description {
   margin: 2px 0 5px 0;
+}
+
+.card:hover {
+  transform: translateZ(5px);
 }
