--- a/src/components/News/NewsSlider/index.css
+++ b/src/components/News/NewsSlider/index.css
@@ -27,6 +27,6 @@
   animation-play-state: paused;
 }
 
-.card:hover {
-  transform: translateZ(5px);
+.block1-it:hover {
+  transform: translateY(10px);
 }
