--- a/src/pages/DiscoverPage/index.css
+++ b/src/pages/DiscoverPage/index.css
@@ -1,18 +1,22 @@
-.TabsPanel {
-  margin: 30px;
-  padding-top: 10px;
-}
-
-.Blocks {
-  margin: 20px;
-  padding-top: 20px;
-}
-
 .EstimationForm {
   margin: 10px;
+  padding-top: 5%;
+}
+
+.DiscoverBody {
   padding-top: 10%;
+  text-align: center;
+}
+
+.Bar {
+  margin: auto;
 }
 
 .BlockCards {
-  display: flex;
+  padding-top: 3%;
+  width: 100%;
+}
+
+.BrokerTable {
+  padding-top: 5%;
 }
