--- a/src/components/Blocks/DividendBlock/index.css
+++ b/src/components/Blocks/DividendBlock/index.css
@@ -1,18 +1,18 @@
-.block1-it,
-.block1-promote {
-  text-align: left;
-  height: 100%;
-}
-
 .block1-it-container {
   padding: 20px;
 }
-.make-first-invest-text {
-  max-width: 350px;
+.block1-it {
+  width: 100%;
 }
-
 .card-details {
   display: flex;
+  text-align: left;
+}
+
+.card-img {
+  margin-right: auto;
+  width: "25%";
+  height: 100px;
 }
 .statbox__title {
   color: #81878c;
@@ -29,5 +29,5 @@
 }
 
 .card:hover {
-  transform: translateX(5px);
+  transform: translateZ(5px);
 }
